--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "request": "^2.88.0",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
