--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.9",
     "morgan": "^1.9.1",
+    "mysql2": "^1.6.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "request": "^2.88.0",
