--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "mongoose": "^5.4.9",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.4",
+    "querystring": "^0.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "request": "^2.88.0",
     "sequelize": "^4.42.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
