--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "mongoose": "^5.4.9",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.4",
