--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "css-loader": "^2.1.0",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.9",
@@ -28,6 +29,7 @@
     "react-dom": "^16.7.0",
     "request": "^2.88.0",
     "sequelize": "^4.42.0",
+    "style-loader": "^0.23.1",
     "styled-components": "^4.1.3",
     "underscore": "^1.9.1"
   },
